<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Resource Descriptions -->
    <string name="receiver_name">BetterMailGmailReceiver</string>
    <string name="app_name">BetterMail</string>
    
    <!-- Preference Categories -->
    <string name="pref_name">Better Mail Settings</string>
	<string name="prefs_quiet_category">Quiet Mode</string>
	        
    <!-- Preference Summaries -->
	<string name="pref_summary_led">Flash the LED when new email arrives</string>
	<string name="pref_summary_ringtone">Play the default notification ringtone when new email arrives</string>
	<string name="pref_sumary_vibrate">Vibrate phone when new email arrives</string>
    <string name="pref_summary_show_notifications">Show a notification when new email arrives.</string>	
	<string name="pref_summary_quiet_start">When to start quiet mode</string>    
	<string name="pref_summary_quiet_end">When to end quiet mode and return to normal notifications</string>
	<string name="pref_summary_quiet_mode">Silence the sound and vibration notifications at night or at work</string>
	<string name="pref_summary_priority_inbox">Show only Priority Inbox notifications</string>
	
	<!--  Preference Titles -->
	<string name="pref_title_led">LED</string>
	<string name="pref_title_ringtone">Ringtone</string>
	<string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_show_notification">Show Notifications</string>	
    <string name="pref_title_quiet_start">Quiet Mode Start</string>
    <string name="pref_title_quiet_end">Quiet Mode End</string>
	<string name="pref_title_quiet_mode">Enable Quiet Mode</string>
	<string name="pref_title_priority_inbox">Priority Inbox Notifications</string>
	    
	<!--  Preference App Strings -->
	<string name="pref_led_notification">pref_led_notification</string>
    <string name="pref_sound_notification">pref_sound_notification</string>
    <string name="pref_vibrate">pref_vibrate</string>
	<string name="pref_show_notification">pref_show_notification</string>        
    <string name="prefs_notification_category">Notifications</string>
    <string name="pref_quiet_start">pref_quiet_start</string>
	<string name="pref_quiet_end">pref_quiet_end</string>
	<string name="pref_quiet_mode">pref_quiet_mode</string>
	<string name="pref_priority_inbox">pref_priority_inbox</string>
	
	<!-- User Email Accunt -->
	<string name="pref_email">pref_email</string>
	
	<!--  Dialog Strings -->	
	<string name="dialog_button_yes">Yes</string>
	<string name="dialog_button_cancel">Cancel</string>
	<string name="dialog_button_ok">OK</string>
	<string name="dialog_button_buy_now">Buy Now</string>
	<string name="dialog_button_quit">Quit</string>
	<string name="dialog_button_accept">Accept</string>
	<string name="dialog_button_refuse">Refuse</string>
	
	<string name="dialog_external_link_message">Open link in external browser?</string>
	<string name="dialog_attachment_message">Download attachment?</string>
	<string name="dialog_network_error_title">Network Error</string>
	<string name="dialog_network_error_message">Unable to connect to the GMail servers. Move to an area with 3G/4G or wifi connectivity and try again.</string>
	<string name="dialog_no_account_title">Unable to access your main Gmail account</string>
	<string name="dialog_no_account_message">For unread notifications to work you need to configure your Google account in the Gmail application first.  If you see still get this message contact support@yumusoft.com.</string>
	<string name="dialog_first_run_title">Welcome to BetterMail</string>
	<string name="dialog_first_run_message">Please log in to Gmail using the user name and password of your phone\'s main account.  (Only one account supported at this time).</string>
	<string name="dialog_eula_title">EULA and Terms</string>
	<string name="dialog_incompatible_gmail_title">Incompatible Gmail</string>
	<string name="dialog_incompatible_gmail_message">The Gmail version installed is not compatible with Better Mail\'s notifications. Notification settings will be disabled.</string>
	
	<!--  Menu Strings -->
	<string name="menu_stop">Stop</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_back">Back</string>
	<string name="menu_forward">Forward</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_inbox">Inbox</string>
	<string name="menu_help">Help</string>
	
	<!-- Notification Strings -->
	<string name="notification_new_unread">%d new messages</string>
	<string name="notification_unread_count">%d unread messages</string>
	
	<!-- UI Strings -->
	<string name="loading">Loading...</string>
	
</resources>
